syntax = "proto3";

option go_package = "github.com/alfarezyyd/go-takemikazuchi-microservices/common/genproto/user_address";

message UserAddressCreateRequest {
  double Latitude = 1;
  double Longitude = 2;
  uint64 UserId = 3;
}

message UserAddressSearchRequest {
  uint64 UserId = 1;
  uint64 UserAddressId = 2;
}

message QueryResponse {
  uint64 Id = 1;
}

service UserAddressService {
  rpc UserAddressStore(UserAddressCreateRequest) returns (QueryResponse);
  rpc FindUserAddressById(UserAddressSearchRequest) returns (QueryResponse);
}
